--- a/src/components/BannerMain.css
+++ b/src/components/BannerMain.css
@@ -1,13 +1,17 @@
 .bannerMain-container{
     background: url("https://cms-web.olacabs.com/00000000383.jpg");
     /* padding-top: 110px; */
+    position: relative;
+    top: 99px;
+    background-size:cover;
+
 }
 .bannerMain{
     display: flex;
     flex-direction: column;
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0) 28%, rgba(0,0,0,0.5) 77%);
-    width: 100%;
-    height: 100vh;
+    /* width: 100%; */
+    height: 110vh;
 }
 .bannerMain-heading{
     color: white;
@@ -38,7 +42,20 @@
 .cabSearch-top>*{
     font-weight: 500;
     color: #333;
+    padding: 2px 3px;
+    border-radius: 50px;
+    font-size: 15px;
+    cursor: pointer;
+    transition: 250ms ease;
 }
+.cabSearch-top>*:hover{
+    background-color: rgb(200,220,0);
+}
+
+.cabSearch-top>:first-child{
+    background-color: rgb(200,220,0);
+}
+
 
 .cabSearch-bottom{
     display: flex;
@@ -49,7 +66,7 @@
     text-align: center;
     padding: 7px 4px;
     color: #444;
-    letter-spacing: 1px;    
+    letter-spacing: 0.7px;    
     font-size: 0.9rem;
 }
 .cabSearch-bottom-form{
