--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,10 @@
 .header{
     display: flex;
     flex-direction: column;
-    /* position:fixed; */
+    position:fixed;
     width: 100%;
     z-index: 4;
-    box-shadow: 0 1px 6px #ccc;
+    box-shadow: 0 1px 6px rgba(0,0,0,0.34);
 }
 .header-top{
     display: flex;
@@ -12,8 +12,8 @@
     background:#222;
     color: #ccc;
     height: 34px;
-    padding:0 4% 0 40%;
     align-items: center;
+    padding-right: 4.5%;
 }
 .header-top>*{
     border-right:1px solid #ccc;
@@ -34,7 +34,7 @@
     align-items: center;
     height: 60px;
     overflow: hidden;
-    padding: 2px 5% 2px 5%;
+    padding: 2px 5.2% 2px 5.2%;
    background-color: white; 
 }
 .ola-logo{
@@ -43,6 +43,7 @@ height: 130px;
 }
 .header-bottom-links{
     display: flex;
+    align-items: center;
 }
 .header-bottom-links>*{
     padding: 10px 25px;
@@ -57,6 +58,8 @@ height: 130px;
     background: rgb(200,225,0);
     border: none;
     outline: none;
+    padding:12px 25px;
+    border-radius: 2px;
 }
 .booking-button:hover{
     background: rgb(185,210,0);
